src/app/shared/navbar/navbar.component.css
nav img {
  width: 3.5em;
}

.nav-item {
  margin-left: 20px;
}

nav img:hover {
  cursor: pointer;
}

.nav-item a {
  font-size: 1.2rem;
  position: relative;
  margin-top: 0.36em;
}

.nav-item a:hover {
  color: white;
  cursor: pointer;
}

.nav-item a::before {
  content: '';
  position: absolute;
  display: block;
  width: 100%;
  height: 2px;
  bottom: -2px;
  left: 0;
  background-color: white;
  transform: scaleX(0);
  transition: transform 0.4s ease;
}

.nav-item a:hover::before {
  transform: scaleX(1);
}

.active a {
  color: white;
  border-bottom: 2px solid white;
}

p {
  margin-top: 0.55em;
  font-size: 25px;
  color: rgb(140, 192, 187);
}

.navbar-brand {
  font-size: 30px;
  margin-top: 0.3em;
  margin-left: 0.5em;
}

